[tool.poetry]
name = "project_chat"
version = "0.1.0"
description = "Project that allows user to ask questions about the project"
authors = ["Tesla2000 <fratajczak124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.7.1"
dynamic-executor = "^1.2.6"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"
openai = "^1.52.2"
tiktoken = "^0.8.0"
chromadb = "^0.5.15"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.3"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project_chat = "project_chat:main"
